Fix background image issues on mobile

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,7 +3,7 @@ body {
   background-repeat: no-repeat;
   background-size:cover;
   background-attachment: fixed;
-  min-height: 100%;
+  min-height: 100vh;
 }
 
 body a {
